@@ -104,9 +104,9 @@
 ##'   conditioning, e.g., \code{type = c("weekday", "daylight")}.)
 ##' @param xlim,ylim The x-axis and y-axis size ranges. By default these sized
 ##'   on the basis of \code{latitude} and \code{longitude}, but can be forced
-##'   as part of the plot call [NOTE: This IN DEVELOPMENT option is currently
-##'   restricted and requested ranges are forced square to maintain map aspect
-##'   ratio.].
+##'   as part of the plot call. (NOTE: This are in-development and should be 
+##'   used with care. The RgoogleMaps argument \code{size = c(640, 640)} can be 
+##'   use to force map dimensions to square.)
 ##' @param pollutant If supplied, the name of a pollutant or variable in
 ##'   \code{mydata} that is to be evaluated at the each measurement point.
 ##'   Depending on settings, nominally \code{cols} and \code{cex}, the
@@ -162,7 +162,9 @@
 ##' @param map.cols Like \code{cols} a colour scale, but, if supplied, used to
 ##'   recolour the map layer before plotting. (NOTE: If set, this will override
 ##'   \code{cols = "greyscale"}.)
-##' @param aspect The aspect ratio of the plot.
+##' @param aspect The aspect ratio of the plot. If \code{NULL} (default), this 
+##'   is calculated by the function based on the data and \code{xlim} and 
+##'   \code{ylim} ranges.  
 ##' @param as.table \code{as.table} is a \code{lattice} option that controls
 ##'   the order in which multiple panels are displayed. The default
 ##'   (\code{TRUE}) produces layouts similar to other openair plot.
@@ -238,7 +240,7 @@ GoogleMapsPlot <- function(mydata,
          limits = c(0,100), cex = pollutant, pch = NULL, cex.range =c(2,10),
          xlab = longitude, ylab = latitude, main = "", axes = TRUE,
          map = NULL, map.raster = TRUE, map.cols = NULL,
-         aspect = 1, as.table = TRUE, plot.type = "xy",
+         aspect = NULL, as.table = TRUE, plot.type = "xy",
          plot.transparent = FALSE,
          key = NULL, key.position = "right",
          key.header = "", key.footer = pollutant,
@@ -537,7 +539,7 @@ GoogleMapsPlot <- function(mydata,
                          names(formals(GetMap.bbox)),
                          names(formals(GetMap))))
 
-######temp til RgoogleMaps Fixed
+######test fix
 
         temp2 <- try(qbbox(lat = temp.y, lon = temp.x), silent = TRUE)
         if(is(temp2)[1] == "try-error")
@@ -545,9 +547,17 @@ GoogleMapsPlot <- function(mydata,
                        "\n\t[check call settings and data source]", sep = ""),
                  call.=FALSE)
 
+my.y <- diff(range(temp2$latR, na.rm=TRUE))
+my.x <- diff(range(temp2$lonR, na.rm=TRUE))
+
+#was c(640, 640)
+my.size <- if(my.y > my.x)
+               c(ceiling((my.x/my.y) * 640), 640) else 
+               c(640, ceiling((my.y/my.x) * 640))
+
         #override some RgoogleMaps defaults
         map <- list(lon = temp2$lonR, lat = temp2$latR, destfile = "XtempX.png",
-                     maptype = "terrain", size = c(640,640))
+                     maptype = "terrain", size = my.size)
         if(length(temp.y)==1) map$zoom <- 15
 
         ##update my defaults with relevant ones in call
@@ -581,13 +591,12 @@ GoogleMapsPlot <- function(mydata,
     #(is larger than data range
     #and already done by RgoogleMaps!)
 
-#Currently disabled because
-#issue with RgoogleMaps
+#re-enabled as part of test fix
 
-##    if(missing(xlim))
-##        xlim <- c(map$BBOX$ll[2], map$BBOX$ur[2])
-##    if(missing(ylim))
-##        ylim <- c(map$BBOX$ll[1], map$BBOX$ur[1])
+    if(missing(xlim))
+        xlim <- c(map$BBOX$ll[2], map$BBOX$ur[2])
+    if(missing(ylim))
+        ylim <- c(map$BBOX$ll[1], map$BBOX$ur[1])
 
 ###############
 #new bit
@@ -599,6 +608,10 @@ temp <- LatLon2XY.centered(map, c(map$BBOX$ll[1], map$BBOX$ur[1]),
                                 c(map$BBOX$ll[2], map$BBOX$ur[2]))
 xlim <- temp$newX
 ylim <- temp$newY
+
+if(is.null(extra.args$aspect))
+    extra.args$aspect <- diff(ylim)/diff(xlim)
+
 
 #latitude, longitude
 temp <- LatLon2XY.centered(map, mydata[, latitude],
